Added new data file, package files, and created a directory for tools

--- a/data/book.html
+++ b/data/book.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+qRBvZ8VN9M6KjjV<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8"><style>
@@ -6305,6 +6305,18 @@ issue of the patent</p>
 <hr class="chapter">
 <p class="chapter"><span class="pagenum"><a id="Page_195">p.
 195</a></span></p>
+
+
+<!-- Here is the start of the glossary of words I'll be parsing and returning.
+it appears like the words and their definitions are kept in a table. Each word and definition
+is kept in a row, in which are two table data tags. The first data tag contains the word, the second
+contains the definition of the word.
+
+While this section of the book spans multiple pages, it shouldn't make too much of a difference. I may want to add
+an id to the table itself for quick and easy reference. More notes to come....
+-->
+
+
 <h3><a id="GLOSSARY_OF_WORDS"></a>GLOSSARY OF
 WORDS<br>
 USED IN TEXT OF THIS VOLUME<span class="totoc"><a href="#toc" class="pginternal">ToC</a></span></h3>
